--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   bloc: ^9.0.0
   provider: ^6.1.5
   google_fonts: ^6.2.1
+  google_sign_in: ^6.1.6
+  cloud_firestore: ^5.6.11
+  firebase_storage: ^12.4.9
+  firebase_core: ^3.15.1
+  firebase_auth: ^5.6.2
+  google_maps_places_autocomplete_widgets: ^1.3.3
 
 dev_dependencies:
   flutter_test:
