--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_core: ^3.15.1
   firebase_auth: ^5.6.2
   google_maps_places_autocomplete_widgets: ^1.3.3
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
